# LET-NET

./: .gitignore  CMakeLists.txt  README.md  anms.h  brief.h  common.cpp  common.hpp  main.cpp  main2.cpp  net.cpp  net.hpp  orb_extractor.cpp  orb_extractor.h  tic_toc.h  tracking.cpp  tracking.h
model/: letnet-gray.onnx  letnet-gray.pt  letnet.onnx  letnet.pt  letnet480x640x1.mnn  letnet480x640x1.onnx  letnet_out.mnn  model.onnx  model320*240*3.onnx  model640*480*1.onnx  model640*480*3.mnn
model/mnn/: model.mnn
model/ncnn/: model.param
tools/: LETNet.py  convert.py  letnet-only_gary.pth  letnet_out.onnx
tools/new_version/: ALIKE.mnn  ALIKE.onnx  alnet.py  letnet.pth  model.pt  tmp.py
tools/old/: convert.py  letnet_out.onnx  输出score图像.mnn
trian/datasets/: cat_datasets.py  hpatches.py  kitti.py  megadepth.py  sintel.py
trian/nets/: MobileNetV2.py  alike.py  alnet.py  losses.py  soft_detect.py  test.py
trian/training/: read_log_params.py  scheduler.py  test_gpu_id.py  train.py  train_wrapper.py  val_hpatches_utils.py
trian/utils/: build_cython.sh  project_depth_nn_cython.pyx  setup.py  utils.py
trian/weight/: model.pt
